syntax = "proto3";

package fileupload;

option go_package = "go-jwt-api/internal/fileupload";

service FileUploadService {
  rpc UploadFile(FileRequest) returns (FileResponse);
}

message FileRequest {
  string filename = 1;
  bytes content = 2;
}

message FileResponse {
  string message = 1;
}
